[package]
name = "MarOS"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = { version = "0.9.23", features = ["map_physical_memory"] }
volatile = "0.4.6"
spin = "0.9.8"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
pic8259 = "0.10.2"
pc-keyboard = "0.7.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33
test-timeout = 30

[package.metadata.bootloader]
physical-memory-offset = "0x0000f00000000000"

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false
